[package]
name = "chipeight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
fps_clock = "2.0"
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.11.1"
env_logger = "0.9"
log = "0.4"
game-loop = { version = "0.9", features = ["window"] }

